# process-manager

./: .gitignore  README.md  io.github.processmanager.ProcessManager.json  meson.build
.cursor/: context.md
.cursor/plans/: process_manager_review_&_improvements_fc66c878.plan.md
.cursor/rules/: git-commit.mdc
data/: io.github.processmanager.ProcessManager.desktop.in  io.github.processmanager.ProcessManager.gschema.xml  io.github.processmanager.ProcessManager.metainfo.xml.in  meson.build  process-manager.gresource.xml  style.css
data/icons/: meson.build
docs/: ai-context.md
po/: LINGUAS  POTFILES  meson.build
src/: __init__.py  alerts.py  constants.py  gpu_stats.py  main.py  meson.build  port_stats.py  preferences.py  process-manager.in  process_history.py  process_manager.py  ps_commands.py  settings.py  system_stats.py  utils.py  window.py
src/dialogs/: __init__.py  export.py  process_details.py  renice.py  shortcuts.py  termination.py
src/handlers/: __init__.py  context_menu.py  keyboard.py  process_actions.py
src/stats/: __init__.py  io.py  ports.py
src/stats/gpu/: __init__.py  amd.py  base.py  detector.py  intel.py  nvidia.py
src/tabs/: __init__.py  gpu_tab.py  ports_tab.py
src/ui/: __init__.py  bookmarks_panel.py  high_usage_panel.py  selection_panel.py  stats_bar.py
tests/: test_scenarios.md
