install_data(
  'hicolor' / 'scalable' / 'apps' / 'io.github.processmanager.ProcessManager.svg',
  install_dir: datadir / 'icons' / 'hicolor' / 'scalable' / 'apps'
)

install_data(
  'hicolor' / 'symbolic' / 'apps' / 'io.github.processmanager.ProcessManager-symbolic.svg',
  install_dir: datadir / 'icons' / 'hicolor' / 'symbolic' / 'apps'
)

